tests/purs/failing/CoercibleClosedRowsDoNotUnify.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleClosedRowsDoNotUnify.purs:7:12 - 7:18 (line 7, column 12 - line 7, column 18)

  Could not match type
  [33m            [0m
  [33m  ( x :: Int[0m
  [33m  ...       [0m
  [33m  )         [0m
  [33m            [0m
  with type
  [33m               [0m
  [33m  ( y :: String[0m
  [33m  ...          [0m
  [33m  )            [0m
  [33m               [0m

while solving type class constraint
[33m                                     [0m
[33m  Prim.Coerce.Coercible { x :: Int   [0m
[33m                        }            [0m
[33m                        { y :: String[0m
[33m                        }            [0m
[33m                                     [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33m{ x :: Int      [0m
                                 [33m}               [0m
                                 [33m-> { y :: String[0m
                                 [33m   }            [0m
while checking that expression [33mcoerce[0m
  has type [33m{ x :: Int      [0m
           [33m}               [0m
           [33m-> { y :: String[0m
           [33m   }            [0m
in value declaration [33mrecToRec[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

